--- a/src/index.pug
+++ b/src/index.pug
@@ -2,12 +2,21 @@ doctype html
 html
     head
       meta(http-equiv='Content-Type', name="viewport", content='width=device-width', charset='utf-8')
-      //- link(rel="shortcut icon", type="image/png", href="./../assets/images/favicon.png")
+      link(rel="shortcut icon", type="image/png", href="./favicon.png")
 
       <!-- build:css -->
+      link(rel="stylesheet", href="https://use.fontawesome.com/releases/v5.3.1/css/all.css", integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU", crossorigin="anonymous")
+      link(rel="stylesheet", type="text/css",  href="./fonts.css")
       link(rel="stylesheet", type="text/css",  href="./index.css")
       <!-- endbuild -->
 
       title Vinyl
     body
-        .test #{foo}
+      .activeTitle Trouble Will Find Me
+      include components/header/index.pug
+      .content
+        .left
+          include components/categories/index.pug
+          include components/items/index.pug
+        .right.
+          active
