--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -41,6 +41,7 @@ header .logo img {
 }
 
 header .title {
+  margin-left: -50px;
   font-size: 24px;
   font-weight: bold;
   letter-spacing: 0.5px;
