Add js to watch task. Add blur effect

--- a/src/components/items/index.pug
+++ b/src/components/items/index.pug
@@ -1,5 +1,7 @@
 include item.pug
 
-.items
-  each record, index in records
-    +item(index + 1, record.cover, record.artist, record.album, record.link)
+.items#items
+  #items-before
+  .items-content
+    each record, index in records
+      +item(index + 1, record.cover, record.artist, record.album, record.link)
