--- a/src/components/items/item.pug
+++ b/src/components/items/item.pug
@@ -1,4 +1,4 @@
-mixin item(index, cover, artist, album, link)
+mixin item(index, cover, artist, album, link, year)
   .item(id="item-" + index)
     if index > 9
       span.number #{index}
@@ -11,3 +11,4 @@ mixin item(index, cover, artist, album, link)
     .link
       a(href=link, target="_blank", id="link-" + index)
         i.fas.fa-link
+    .year #{year}
