--- a/src/components/items/index.pug
+++ b/src/components/items/index.pug
@@ -3,5 +3,5 @@ include item.pug
 .items#items
   #items-before
   .items-content
-    each record, index in records
-      +item(index + 1, record.cover, record.artist, record.album, record.link, record.year)
+    each r, i in records
+      +item(i + 1, r.cover, r.artist, r.album, r.link, r.year, r.category)
