--- a/components/categories/index.html
+++ b/components/categories/index.html
@@ -1,1 +1,1 @@
-<div class="categories"><div class="category" id="to-buy">To buy</div><div class="category" id="already-have">Already have</div></div>
+<div class="categories"><div class="category active" id="all">All</div><div class="category" id="to-buy">To buy</div><div class="category" id="already-have">Already have</div></div>
