--- a/src/components/categories/index.pug
+++ b/src/components/categories/index.pug
@@ -1,3 +1,3 @@
 .categories
   each category in categories
-    .category(class=category.active ? "active" : "" id=category.key) #{category.value}
+    .category(class=category.active ? "active" : "", id=category.key) #{category.value}
